Homework 9: Add some basic implementation for car/fleet module
